Remove absolute path in HTML to schematic SVG by dynamically linking to it from Python

--- a/InteractiveHtmlBom/web/ibom.html
+++ b/InteractiveHtmlBom/web/ibom.html
@@ -270,7 +270,9 @@
         </div>
       </div>
       <div id="dbg"></div>
-      <img src="file:///Users/lichard/Projects/boardviz/Arduino_KiCad/arduino_Uno_Rev3-02-TH/kicad_arduino_Uno_Rev3-02-TH/bom/sch.svg">
+      <!-- /////////////////////////////////////////////// -->
+      ///SCHEMATICDATA///
+      <!-- /////////////////////////////////////////////// -->
     </div>
     <div id="canvasdiv" class="split split-horizontal">
       <div id="frontcanvas" class="split" touch-action="none" style="overflow: hidden">
