hardcoded highlighting for some capacitors

--- a/InteractiveHtmlBom/web/ibom.html
+++ b/InteractiveHtmlBom/web/ibom.html
@@ -270,9 +270,18 @@
         </div>
       </div>
       <div id="dbg"></div>
+      <div id="schematic">
       <!-- /////////////////////////////////////////////// -->
       ///SCHEMATICDATA///
       <!-- /////////////////////////////////////////////// -->
+        <svg id="schematic-highlights"></svg>
+      </div>
+      <table class="bom">
+        <thead id="bomhead">
+        </thead>
+        <tbody id="bombody">
+        </tbody>
+      </table>
     </div>
     <div id="canvasdiv" class="split split-horizontal">
       <div id="frontcanvas" class="split" touch-action="none" style="overflow: hidden">
